--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,100 @@
 .App {
-  text-align: center;
+  background: rgb(255, 255, 255);
+  background: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(221, 222, 223, 1) 50%,
+    rgba(255, 255, 255, 1) 100%
+  );
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navar {
+  background-color: #0a395e;
+  width: 100%;
+  height: 60px;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+.navar a img {
+  width: 70px;
+  height: 50px;
+}
+.navar a {
   color: white;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-size: 20px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.walpperper img {
+  height: 260px;
+  width: 100%;
+  object-fit: cover;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.walpperper h1 {
+  color: white;
+  font-size: 65px;
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 125px;
+  margin-top: -200px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.walpperper_logo {
+  width: 50px;
+  height: 50px;
+}
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  margin-top: 200px;
+  justify-content: center;
+}
+
+.card {
+  width: 210px;
+  background-color: white;
+  margin: 7px;
+  margin-bottom: 20px;
+  border-style: solid;
+  border-right-color: rgb(83, 83, 83);
+  border-bottom-color: rgb(105, 104, 104);
+  border-left-color: white;
+  border-top-color: white;
+  background: rgb(250, 245, 245);
+  background: radial-gradient(
+    circle,
+    rgba(250, 245, 245, 1) 0%,
+    rgba(171, 180, 171, 1) 100%
+  );
+}
+
+.card_image {
+  width: 100%;
+  height: 220px;
+  object-fit: cover;
+}
+
+.card_info {
+  padding: 11px;
+}
+
+.card h1 {
+  font-size: 18px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.card p {
+  font-size: 15px;
+  margin: 10px auto;
+}
+
+.card p img {
+  width: 20px;
+  height: 20px;
 }
